swagger問題的解決
