# routes/route.go
@@ -2,19 +2,20 @@ package routes
 
 import (
 	"myProj/clients"
-	"myProj/docs"
+	_ "myProj/docs"
 
 	"github.com/gin-gonic/gin"
 	swaggerfiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
 
+// @title	myProj API
+// @version	1.0
+// @description	myProj后端api文档服务.
+// @BasePath  /api/v1
+// @schemes http https
+// @securityDefinitions.basic BasicAuth
 func SetUpRoutes(r *gin.Engine) *gin.Engine {
-	docs.SwaggerInfo.Title = "myProj API"
-	docs.SwaggerInfo.Description = "myProj后端api文档服务"
-	docs.SwaggerInfo.Version = "1.0"
-	docs.SwaggerInfo.BasePath = "/api/v1"
-	docs.SwaggerInfo.Schemes = []string{"http", "https"}
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 
 	test := r.Group("api/test")
